<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/video_player_container"
        android:layout_width="match_parent"
        android:background="#000000"
        android:layout_height="250dp">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/video_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/no_video_text"
            style="@style/BakingAppText.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_video_available"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/recipe_thumbnail_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </FrameLayout>


    <TextView
        android:id="@+id/step_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="14sp"
        tools:text="Step Short Description" />
</LinearLayout>